# Neural-Network-Convolutional-Pneumonia-X

./: Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/: mkdocs.yml
docs/docs/: index.md
src/: __init__.py  dataset.py  features.py  plots.py
src/modeling/: predict.py  train.py
