[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "CNN"
version = "0.0.1"
description = "Pneumonia X-Ray Classification with CNNs"
authors = [
  { name = "Rafael Gallo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["CNN"]
include = ["pyproject.toml", "CNN/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["CNN"]
force-sort-within-sections = true

